--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 *{
     font-family: monospace;
+    user-select: none;
 }
 
-
+*::-webkit-scrollbar {
+    display: none;
+  }
 
 body{
     margin: 0px;
@@ -165,7 +168,8 @@ body{
     border: 0px;
     background-color: #FF8F9E;
     color: #fff;
-    
+    min-height: 25px;
+    min-width: 200px;
 }
 
 #search input:focus{
@@ -178,13 +182,21 @@ footer{
     bottom: 10px;
     width: 50%;
     border-top: 3px solid #FF8F9E;
+    align-items: center;
+    justify-content: center;
     text-align: center;
     width: 100%;
     margin: 0px;
     margin-bottom: -3%;
+    margin-top: 10%;
+    top: 100;
+    bottom: 0;
     overflow: hidden;
-    padding-bottom: 10px;
+    padding-bottom: 30px;
     border-bottom: 3px solid #FF8F9E;
+    max-height: 20%;
+    min-height: 0;
+    transform: translateY(90px);
     
 }
 
@@ -200,6 +212,7 @@ footer .footer-url{
     padding: 5px;
     transition: all .5s;
     margin-bottom: 20px;
+    width: fit-content;
 }
 
 footer .footer-url:last-child{
@@ -212,7 +225,7 @@ footer .footer-url:active{
 
 #backgroundpopup{
     background-color: pink;
-    border: none;
+    border: 2px solid transparent;
     cursor: pointer;
 }
 
@@ -222,17 +235,38 @@ footer .footer-url:hover{
 }
 
 #backgroundpopup:hover{
-    border: 2px solid pink;
+    border: 2px solid #FF8F9E;
 }
+
+
+
 .autofiller{
     margin: auto;
 }
 
 #mainlogo{
-    margin-top: 10em;
+    width: 40%;
+    margin: 0;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    background-color: transparent;
+    max-height: 50vh;
+    max-width: 50vh;
 }
 
 #greybg{
+    position: fixed;
+    background-color: black;
+    opacity: 0.5;
+    width: 100%;
+    height: 100%;
+    top: 0%;
+}
+
+#greybg2{
     position: fixed;
     background-color: black;
     opacity: 0.5;
@@ -245,7 +279,7 @@ footer .footer-url:hover{
     position: fixed;
     background-color: #FF8F9E;
     width: 30%;
-    height: 20%;
+    height: 200px;
     top: 20%;
     left: 33%;
     border-radius: 15px;
@@ -254,7 +288,7 @@ footer .footer-url:hover{
     
 }
 
-#bgurl{
+.boxtext{
     width: 100%;
     border-radius: 50px;
     border: none;
@@ -286,6 +320,7 @@ footer .footer-url:hover{
 .credits{
     color: black;
     transition: 0.5s;
+    user-select: none;
 }
 
 .credits:hover{
@@ -299,6 +334,9 @@ footer .footer-url:hover{
     border-radius: 14px;
     top: 1%;
     left: 1%;
+    position: fixed;
+    user-select: none;
+    color: white;
 }
 
 .clock-time, .clock-ampm{
@@ -311,4 +349,40 @@ footer .footer-url:hover{
 
 .clock-second{
     font-size: 4vh;
+}
+
+#draggable{
+    cursor: move;
+}
+
+.fixed{
+    position: absolute;
+}
+
+#clockPosToggle{
+    margin-right: 5px;
+    background-color: #FF8F9E;
+}
+
+footer label{
+    font-size: 1.5vh;
+    transition: .5s;
+}
+
+#tab-whole{
+    visibility: hidden;
+}
+
+#launchTabCustomize{
+    background-color: pink;
+    border: 2px solid transparent;
+    cursor: pointer;
+}
+
+#launchTabCustomize:hover{
+    border: 2px solid #FF8F9E;
+}
+
+footer label:hover{
+    color: white;
 }
