--- a/style.css
+++ b/style.css
@@ -378,7 +378,7 @@ footer .footer-url:hover{
     position: fixed;
     user-select: none;
     color: white;
-    
+    transition: width 1s, height 1s;
     backdrop-filter: blur(15px);
 
     
@@ -401,7 +401,7 @@ footer .footer-url:hover{
 .clock-large{
     width: 100%;
     height: 100%;
-    transition: all 1s;
+    transition: all 1s ease;
     background-color: rgba(255,255,255, 0%);
     position: fixed;
     padding: 12px;
@@ -421,6 +421,30 @@ footer .footer-url:hover{
     top: 0;
     left: 0;
 
+}
+
+.clock-swipe{
+    width: 100%;
+    height: 100%;
+    transition: all 1s ease;
+    background-color: rgba(255,255,255, 0%);
+    position: fixed;
+    padding: 12px;
+    border-radius: 14px;
+    user-select: none;
+    color: white;
+    text-align: center;
+    margin: 0;
+    backdrop-filter: blur(100px);
+    align-items: center;
+    font-size: large;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: x-large;
+    top: 0;
+    left: 100%;
 }
 
 .clock-large .clock-time{
